--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 .banner {
@@ -19,7 +18,6 @@
     position: absolute;
     top: 78%;
     left: 85%;
-    
 }
 
 h1{
@@ -39,10 +37,6 @@ h2{
     text-align: center;
 }
 
-a{
-    display: block;
-}
-
 h3{
     font-family: 'Comic Neue', cursive;
     font-size: 20px;
@@ -51,4 +45,61 @@ h3{
 p{
     font-family: 'Comic Neue', cursive;
     font-size: 15px;
+}
+
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    height: 100%;
+    position: fixed;
+    overflow: auto;
+}
+
+li a{
+    display: block;
+    padding: 50px;
+}
+
+.fecha-evento{
+    display: block;
+    position: absolute;
+    right: 500px;
+    padding: 50px;
+}
+
+.fecha-evento h3{
+    padding-bottom: 5px;
+}
+
+.fecha-evento p{
+    padding-bottom: 60px;
+    text-indent: 20px;
+}
+.info-mdhl{
+    display: block;
+    position: absolute;
+    left: 300px;
+    padding: 50px;
+}
+
+.info-mdhl h3{
+    padding-bottom: 5px;
+}
+
+.info-mdhl p{
+    padding-bottom: 60px;
+    text-indent: 20px;
+}
+
+.contact{
+    display: block;
+    position: absolute;
+    left: 300px;
+    padding: 50px;
+}
+.contact p{
+    padding-bottom: 60px;
+    text-indent: 20px;
 }
