--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -8,7 +8,7 @@
 
 .banner {
     background-image: url(../img/design1_image1.jpg);
-    background-position: cover;
+    background-size: cover;
     height: 200pt;
     position: relative;
 }
