--- a/assets/styles/style1.css
+++ b/assets/styles/style1.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
 }
 
+/* Website_Design1 */
+
 .banner {
     background-image: url(../img/design1_image1.jpg);
     background-size: cover;
