--- a/assets/styles/style2.css
+++ b/assets/styles/style2.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Website_Design2 */
+
 h1 {
     font-family: 'Comic Neue', cursive;
     font-size: 50px;
